se agrega entitdades de relacion muchos a muchos y base en sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/libros?serverTimeZone=GMT-6
-spring.datasource.username=libros
-spring.datasource.password=libros
+spring.datasource.url=jdbc:mysql://localhost:3306/libreria?serverTimeZone=GMT-6
+spring.datasource.username=root
+spring.datasource.password=
